plugins/kotlin/idea/tests/testData/multiModuleLineMarker/actualDerived/common/common.kt
open class <!LINE_MARKER("descr='Is subclassed by ExpectedChild [common] ExpectedChild [jvm] SimpleChild  Click or press ... to navigate'")!>SimpleParent<!>

expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>ExpectedChild<!> : SimpleParent

class SimpleChild : SimpleParent()
